[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
 
[project] 
name = "project"
version = "0.0.1"
description = "description"
authors = [
    {name = "Roman Bashirov", email = "bashiroff.roman@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
     "blocksnet==1.0.0.dev1",
     "numpy",
     "osmnx",
     "pandas",
     "geopandas",
     "matplotlib",
     "folium",
     "mapclassify",
     "branca"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["changer_capacity"]